--- a/style.css
+++ b/style.css
@@ -1,31 +1,35 @@
-<<<<<<< HEAD
 .main-content__title {
   font-family: 'Oswald', sans-serif;
-  color:green;
+  color: green;
 }
 
 .main-content__subtitle {
   font-family: 'Lobster', cursive;
 }
 .menu {
-  text-decoration: underline;
+  display: flex;
+  align-items: center;
 }
 .main-content__button {
-  color:blue;
+  color: blue;
 }
-=======
-.qwe {
-  font-family: 'Oswald', sans-serif;
-  color:green;
+.header{
+  display: flex;
+  justify-content: space-between;
 }
 
-.z {
-  font-family: 'Lobster', cursive;
+/*.logo, .menu{
+  display: inline-block;
+} */
+
+.logo{
+  padding: 40px 0;
 }
-.list {
-  text-decoration: underline;
+
+.menu__item{
+  padding: 0 13px;
 }
-button {
-  color:blue;
+
+.menu__item:last-child{
+  padding-right: 0;
 }
->>>>>>> main
