--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 .main-content__title {
   font-family: 'Oswald', sans-serif;
-  color: green;
 }
 
 .main-content__subtitle {
@@ -10,16 +9,17 @@
   display: flex;
   align-items: center;
 }
-.main-content__button {
-  color: blue;
-}
+
 .header{
+  padding: 40px 0;
   display: flex;
   justify-content: space-between;
 }
 
 .logo{
-  padding: 40px 0;
+  width:190px;
+  height:35px;
+  background: url('img/logo.svg');
 }
 
 .menu__item{
