--- a/style.css
+++ b/style.css
@@ -17,17 +17,53 @@
 }
 
 .logo{
-  width:190px;
-  height:35px;
+  width: 190px;
+  height: 35px;
   background: url('img/logo.svg');
 }
 
 .menu__item{
-  padding: 0 13px;
+  position: relative;
+  margin-right: 26px;
   font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
   color: #000;
+  text-decoration: none;
+  transition: opacity 0.5s;
 }
 
 .menu__item:last-child{
-  padding-right: 0;
+  margin-right: 0;
+}
+
+.menu__item_active:after{
+  position: absolute;
+  display: block;
+  content: '';
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: #0056EC;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
+.menu__item:hover:after{
+  position: absolute;
+  display: block;
+  content: '';
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: #0056EC;
+  opacity: 0;
+  transition: opacity 0.5s, width 0.5s;
+}
+
+.menu__item:hover{
+  opacity: 0.5;
+}
+
+.menu__item:hover:after, .menu__item_active:after{
+  opacity: 1;
+  width: 100%;
 }
