--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
-.main-content__title {
-  font-family: 'Oswald', sans-serif;
+.main__title {
+  font: bold 50px/65px pt_serif, arial, helvetica, sans-serif;
+  margin-bottom: 0 0 40px 0;
 }
 
-.main-content__subtitle {
-  font-family: 'Roboto', sans-serif;
+.main__subtitle {
+  font: 18px/21px Roboto, arial, helvetica, sans-serif;
+  margin-bottom: 0 0 41px 0;
 }
 .menu {
   display: flex;
@@ -11,9 +13,10 @@
 }
 
 .header{
-  padding: 40px 0;
+  //padding: 40px 0;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 100px;
 }
 
 .logo{
@@ -66,4 +69,29 @@
 .menu__item:hover:after, .menu__item_active:after{
   opacity: 1;
   width: 100%;
+}
+
+.main{
+  padding: 0 63% 350px 0;
+  background: top right no-repeat url(img/mainlmg.svg);
+  //background-position: center right;
+}
+
+.main__title-text_highlight{
+  background: #ECF3FF;
+}
+
+.main__button{
+  display: inline-block;
+  font: 14px/16px Roboto, arial, helvetica, sans-serif;
+  color: #fff;
+  background: #0056EC;
+  padding: 14px 16px;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: opacity .5s;
+}
+
+.main__button:hover{
+  opacity: .5;
 }
