--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 .main__title {
   font: bold 50px/65px pt_serif, arial, helvetica, sans-serif;
-  margin-bottom: 0 0 40px 0;
+  margin: 0 0 40px 0;
 }
 
 .main__subtitle {
   font: 18px/21px Roboto, arial, helvetica, sans-serif;
-  margin-bottom: 0 0 41px 0;
+  margin: 0 0 41px 0;
 }
 .menu {
   display: flex;
@@ -13,7 +13,7 @@
 }
 
 .header{
-  //padding: 40px 0;
+  padding: 20px 40px;
   display: flex;
   justify-content: space-between;
   margin-bottom: 100px;
@@ -72,9 +72,10 @@
 }
 
 .main{
-  padding: 0 63% 350px 0;
+  padding: 0 63% 150px 40px;
   background: top right no-repeat url(img/mainlmg.svg);
-  //background-position: center right;
+  background-position: center right 180px;
+  background-size: 600px;
 }
 
 .main__title-text_highlight{
