--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .main__subtitle {
-  font: 23px/22px Roboto, arial, helvetica, sans-serif;
+  font: 500 23px/22px Roboto, arial, helvetica, sans-serif;
   margin: 0 0 33px 70px;
   width: 453px;
 }
@@ -102,35 +102,141 @@
   opacity: .5;
 }
 
-@media (min-with:1170px){
-
+#menu__toggle{
+  opacity: 0;
 }
+
+/*@media (min-with:1170px){
+
+}*/
 
 @media (max-width:768px) {
   .menu{
     display:none;
   }
 
+  .logo{
+    background: url('img/logomobile.svg');
+    background-size: 36px;
+    background-repeat:no-repeat;
+    background-position: 0px 0px;
+  }
+
   .header{
-    margin-bottom:28px;
+    margin:25px 15px;
+    width:52px;
+    padding: 0px;
   }
   .main{
     text-align: center;
-    padding: 74% 0 0;
-    background-size: 74%;
+    padding: 31% 0 0;
+    background-size: 77%;
     background-position: top center;
   }
 
   .main__title{
-    margin-bottom:44px;
+    margin:148px 0px 35px 5px;
     font: bold 30px/39px pt_serif, arial, helvetica, sans-serif;
   }
   .main__subtitle{
-    margin-bottom:25px;
+    margin:0px 0px 20px 60px;
     font: 500 16px/19px Roboto, arial, helvetica, sans-serif;
+    width: 238px;
   }
 
   .main__button{
-    font 500 14px/16px Roboto, arial, helvetica, sans-serif;
+    font: 500 13px/3px Roboto, arial, helvetica, sans-serif;
+    margin: 4px 0px 0px 2px;
+    border-radius:4px;
   }
+  #menu__toggle{
+    opacity: 0;
+  }
+  /* стилизуем кнопку */
+.menu__btn {
+  display: flex; /* используем flex для центрирования содержимого */
+  align-items: center;  /* центрируем содержимое кнопки */
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
+  z-index: 1;
+}
+/* добавляем "гамбургер" */
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #616161;
+}
+.menu__btn > span::before {
+  content: '';
+  top: -8px;
+}
+.menu__btn > span::after {
+  content: '';
+  top: 8px;
+}
+
+/* контейнер меню */
+.menu {
+  display: block;
+  position: fixed;
+  visibility: hidden;
+  top: 0;
+  left: -100%;
+  width: 300px;
+  height: 100%;
+  margin: 0;
+  padding: 80px 0;
+  list-style: none;
+  text-align: center;
+  background-color: #ECEFF1;
+  box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+}
+/* элементы меню */
+.menu__item {
+  display: block;
+  padding: 12px 24px;
+  color: #333;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: none;
+}
+.menu__item:hover {
+  background-color: #CFD8DC;
+}
+
+#menu__toggle:checked ~ .menu__btn > span {
+  transform: rotate(45deg);
+}
+#menu__toggle:checked ~ .menu__btn > span::before {
+  top: 0;
+  transform: rotate(0);
+}
+#menu__toggle:checked ~ .menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .menu {
+  visibility: visible;
+  left: 0;
+}
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  transition-duration: .25s;
+}
+.menu {
+  transition-duration: .25s;
+}
+.menu__item {
+  transition-duration: .25s;
+}
 }
