--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@media(max-width:1920px){
 .main__title {
   font: bold 67px/88px pt_serif, arial, helvetica, sans-serif;
   margin: 150px 3px 37px 66px;
@@ -11,11 +12,11 @@
 .menu {
   display: flex;
   align-items: center;
-  margin-right: 9px;
+  margin: -23px 9px;
 }
 
 .header{
-  padding: 30px 185px;
+  padding: 32px 185px;
   display: flex;
   justify-content: space-between;
   margin-bottom: 7px;
@@ -76,7 +77,7 @@
 }
 
 .main{
-  padding: 51px 63% 265px 116px;
+  padding: 50px 63% 265px 116px;
   background: top right no-repeat url(img/mainlmg.svg);
   background-position: center right 190px;
   background-size: 768px;
@@ -91,11 +92,11 @@
   font: 18px/17px Roboto, arial, helvetica, sans-serif;
   color: #fff;
   background: #0056EC;
-  padding: 25px 39px 19px 21px;
+  padding: 22px 39px 19px 21px;
   text-decoration: none;
   border-radius: 4px;
   transition: opacity .5s;
-  margin: 9px 0 0 73px;
+  margin: 13px 0 0 73px;
 }
 
 .main__button:hover{
@@ -105,8 +106,90 @@
 #menu__toggle{
   opacity: 0;
 }
+}
 
+@media(max-width:1367px){
+  .logo{
+  width: 200px;
+  height: 37px;
+  background-size: 193px;
+  background-repeat:no-repeat;
+}
+.header{
+    margin:28px -155px;
+    padding: 11px 363px;
+  }
+ .menu {
+    margin: -57px 0px 0px 612px;
+  }
+  .menu__item{
+      margin-right: 23px;
+      font: 700 14px/40px Roboto, arial, helvetica, sans-serif;
+    }
+  .main{
+    padding: 15% 31px 136px 33px;
+    background-size: 38%;
+    background-position: center right 210px;
+  }
 
+  .main__title{
+    margin:-107px 672px 41px 173px;
+    font: bold 51px/64px pt_serif, arial, helvetica, sans-serif;
+  }
+  .main__subtitle{
+    margin:0px 0px 20px 6px;
+    font: 500 19px/21px Roboto, arial, helvetica, sans-serif;
+    width: 351px;
+  }
+
+  .main__button{
+    font: 500 13px/3px Roboto, arial, helvetica, sans-serif;
+    margin: 24px 0px 0px 177px;
+    border-radius:4px;
+  }
+}
+
+@media (max-width:1024px){
+.logo{
+  width: 200px;
+  height: 37px;
+  background-size: 193px;
+  background-repeat:no-repeat;
+}
+  .header{
+    margin:28px -150px;
+    padding: 11px 185px;
+  }
+   .menu {
+    margin: -18px 8px;
+  }
+    .menu__item{
+      margin-right: 26px;
+      font: 700 14px/40px Roboto, arial, helvetica, sans-serif;
+
+  }
+  .main{
+    padding: 15% 31px 136px 33px;
+    background-size: 50%;
+    background-position: center right 46px;
+  }
+
+  .main__title{
+    margin:-52px 405px 41px 5px;
+    font: bold 50px/64px pt_serif, arial, helvetica, sans-serif;
+  }
+  .main__subtitle{
+    margin:0px 0px 20px 6px;
+    font: 500 19px/21px Roboto, arial, helvetica, sans-serif;
+    width: 351px;
+  }
+
+  .main__button{
+    font: 500 13px/3px Roboto, arial, helvetica, sans-serif;
+    margin: 19px 0px 0px 6px;
+    border-radius:4px;
+  }
+}
 
 @media (max-width:768px) {
   .menu{
@@ -147,6 +230,7 @@
     margin: 4px 0px 0px 2px;
     border-radius:4px;
   }
+
   #menu__toggle{
     opacity: 0;
   }
@@ -170,7 +254,7 @@
   position: absolute;
   width: 100%;
   height: 2px;
-  background-color: #616161;
+  background-color: #0056EC;
 }
 .menu__btn > span::before {
   content: '';
@@ -237,87 +321,4 @@
 .menu__item {
   transition-duration: .25s;
 }
-}
-
-@media (max-width:1024px){
-.logo{
-  width: 200px;
-  height: 37px;
-  background-size: 193px;
-  background-repeat:no-repeat;
-}
-  .header{
-    margin:28px -150px;
-    padding: 11px 185px;
-  }
-   .menu {
-    margin: -18px 8px;
-  }
-    .menu__item{
-      margin-right: 26px;
-      font: 700 14px/40px Roboto, arial, helvetica, sans-serif;
-
-  }
-  .main{
-    padding: 15% 31px 136px 33px;
-    background-size: 50%;
-    background-position: center right 46px;
-  }
-
-  .main__title{
-    margin:-52px 405px 41px 5px;
-    font: bold 50px/64px pt_serif, arial, helvetica, sans-serif;
-  }
-  .main__subtitle{
-    margin:0px 0px 20px 6px;
-    font: 500 19px/21px Roboto, arial, helvetica, sans-serif;
-    width: 351px;
-  }
-
-  .main__button{
-    font: 500 13px/3px Roboto, arial, helvetica, sans-serif;
-    margin: 19px 0px 0px 6px;
-    border-radius:4px;
-  }
-}
-
-@media (max-width:1366px){
-.logo{
-  width: 200px;
-  height: 37px;
-  background-size: 193px;
-  background-repeat:no-repeat;
-}
-  .header{
-    margin:28px -155px;
-    padding: 11px 363px;
-  }
-   .menu {
-    margin: -57px 0px 0px 612px;
-  }
-    .menu__item{
-      margin-right: 23px;
-      font: 700 14px/40px Roboto, arial, helvetica, sans-serif;
-    }
-  .main{
-    padding: 15% 31px 136px 33px;
-    background-size: 38%;
-    background-position: center right 210px;
-  }
-
-  .main__title{
-    margin:-107px 672px 41px 173px;
-    font: bold 51px/64px pt_serif, arial, helvetica, sans-serif;
-  }
-  .main__subtitle{
-    margin:0px 0px 20px 6px;
-    font: 500 19px/21px Roboto, arial, helvetica, sans-serif;
-    width: 351px;
-  }
-
-  .main__button{
-    font: 500 13px/3px Roboto, arial, helvetica, sans-serif;
-    margin: 24px 0px 0px 177px;
-    border-radius:4px;
-  }
 }
