--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 @media(max-width:1920px){
 .main__title {
-  font: bold 67px/88px pt_serif, arial, helvetica, sans-serif;
-  margin: 150px 3px 37px 66px;
+  font: bold 66px/88px pt_serif, arial, helvetica, sans-serif;
+  margin: 149px 3px 32px 71px;
 }
 
 .main__subtitle {
-  font: 500 23px/22px Roboto, arial, helvetica, sans-serif;
-  margin: 0 0 33px 70px;
+  font: 500 23px/28px Roboto, arial, helvetica, sans-serif;
+  margin: 0 0 27px 71px;
   width: 453px;
+  letter-spacing: -0.54px;
 }
 .menu {
   display: flex;
@@ -32,8 +33,8 @@
 
 .menu__item{
   position: relative;
-  margin-right: 28px;
-  font: 500 18px/40px Roboto, arial, helvetica, sans-serif;
+  margin-right: 26px;
+  font: 500 18px/45px Roboto, arial, helvetica, sans-serif;
   color: #000;
   text-decoration: none;
   transition: opacity 0.5s;
@@ -53,7 +54,7 @@
   background: #0056EC;
   opacity: 0;
   transition: opacity 0.5s;
-  top:28px;
+  top:32px;
 }
 
 .menu__item:hover:after{
@@ -78,10 +79,11 @@
 }
 
 .main{
-  padding: 50px 63% 265px 116px;
+  padding: 49px 63% 262px 116px;
   background: top right no-repeat url(img/mainlmg.svg);
-  background-position: center right 190px;
-  background-size: 768px;
+  background-position: center right 189px;
+  background-size: 770px;
+  float:left;
 }
 
 .main__title-text_highlight{
@@ -93,11 +95,11 @@
   font: 18px/17px Roboto, arial, helvetica, sans-serif;
   color: #fff;
   background: #0056EC;
-  padding: 22px 39px 19px 21px;
+  padding: 22px 35px 19px 21px;
   text-decoration: none;
   border-radius: 4px;
   transition: opacity .5s;
-  margin: 13px 0 0 73px;
+  margin: 13px 0 0 72px;
 }
 
 .main__button:hover{
@@ -117,8 +119,8 @@
   background-repeat:no-repeat;
 }
 .header{
-    margin:28px -152px;
-    padding: 11px 363px;
+    margin:28px 0px;
+    padding: 11px 210px;
   }
  .menu {
     margin: -20px 4px 0px 400px;
@@ -127,6 +129,38 @@
       margin-right: 26px;
       font: 700 14px/40px Roboto, arial, helvetica, sans-serif;
     }
+  .menu__item_active:after{
+      position: absolute;
+      display: block;
+      content: '';
+      left: 0;
+      width: 100%;
+      height: 3px;
+      background: #0056EC;
+      opacity: 0;
+      transition: opacity 0.5s;
+      top:29px;
+    }
+    .menu__item:hover:after{
+      position: absolute;
+      display: block;
+      content: '';
+      left: 0;
+      width: 100%;
+      height: 3px;
+      background: #0056EC;
+      opacity: 0;
+      transition: opacity 0.5s, width 0.5s;
+    }
+
+    .menu__item:hover{
+      opacity: 0.5;
+    }
+
+    .menu__item:hover:after, .menu__item_active:after{
+      opacity: 1;
+      width: 100%;
+    }
   .main{
     padding: 15% 31px 136px 33px;
     background-size: 38%;
@@ -134,61 +168,75 @@
   }
 
   .main__title{
-    margin:-107px 672px 41px 173px;
-    font: bold 51px/64px pt_serif, arial, helvetica, sans-serif;
+    margin:-108px 672px 41px 177px;
+    font: bold 50px/65px pt_serif, arial, helvetica, sans-serif;
   }
   .main__subtitle{
     margin:0px 0px 20px 177px;
-    font: 500 18px/23px Roboto, arial, helvetica, sans-serif;
+    font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
     width: 351px;
+    letter-spacing: 0px;
   }
 
   .main__button{
     font: 500 14px/3px Roboto, arial, helvetica, sans-serif;
-    margin: 19px 0px 0px 178px;
+    margin: 21px 0px 0px 178px;
     border-radius:4px;
-    padding: 22px 26px 20px 16px;
+    padding: 22px 27px 20px 16px;
   }
 }
 
 @media (max-width:1024px){
+
 .logo{
   width: 200px;
-  height: 37px;
+  height: 35px;
   background-size: 193px;
   background-repeat:no-repeat;
+  margin-left: -148px;
 }
   .header{
-    margin:28px -150px;
+    margin:28px 0px;
     padding: 11px 185px;
   }
    .menu {
-    margin: -19px 3px;
+    margin: -19px -149px;
   }
-    .menu__item{
+   .menu__item{
       margin-right: 26px;
       font: 700 14px/40px Roboto, arial, helvetica, sans-serif;
-
-  }
-  .main{
-    padding: 15% 31px 136px 33px;
-    background-size: 50%;
-    background-position: center right 44px;
+    }
+  /*.menu__item_active:after {
+          position: absolute;
+          display: block;
+          content: '';
+          left: 0;
+          width: 100%;
+          height: 3px;
+          background: #0056EC;
+          opacity: 0;
+          transition: opacity 0.5s;
+          top:29px;
+    }*/
+   .main{
+    padding: 15% 31px 140px 31px;
+    background-size: 51%;
+    background-position: center right 39px;
   }
 
   .main__title{
-    margin:-52px 405px 41px 5px;
-    font: bold 50px/64px pt_serif, arial, helvetica, sans-serif;
+    margin:-52px 405px 41px 6px;
+    font: bold 50px/65px pt_serif, arial, helvetica, sans-serif;
   }
   .main__subtitle{
-    margin:0px 0px 20px 6px;
-    font: 500 18px/23px Roboto, arial, helvetica, sans-serif;
+    margin:0px 0px 23px 7px;
+    font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
     width: 351px;
   }
 
   .main__button{
-    font: 500 14px/3px Roboto, arial, helvetica, sans-serif;
-    margin: 19px 0px 0px 5px;
+    font: 500 14px/2px Roboto, arial, helvetica, sans-serif;
+    margin: 19px 0px 0px 7px;
     border-radius:4px;
   }
 }
