--- a/style.css
+++ b/style.css
@@ -109,6 +109,32 @@
 #menu__toggle{
   opacity: 0;
 }
+
+ @keyframes move {
+   0% {
+     transform: translateX(0%);
+     opacity:25%;
+   }
+   100% {
+     transform:translateX(9400%);
+     opacity: 100%;
+   }
+ }
+   .square {
+     display: block;
+     height: 20px;
+     width:20px;
+     opacity:25%;
+     background-color: purple;
+     animation-name: move;
+     animation-duration: 2s;
+     animation-timing-function: ease-out;
+     animation-delay: 1s;
+     animation-direction: alternate;
+     animation-iteration-count: infinite;
+     animation-fill-mode: none;
+     animation-play-state: running;
+   }
 }
 
 @media(max-width:1367px){
@@ -184,6 +210,32 @@
     border-radius:4px;
     padding: 22px 27px 20px 16px;
   }
+
+  @keyframes move {
+    0% {
+      transform: translateX(0%);
+      opacity:25%;
+    }
+    100% {
+      transform:translateX(6700%);
+      opacity: 100%;
+    }
+  }
+    .square {
+      display: block;
+      height: 20px;
+      width:20px;
+      opacity:25%;
+      background-color: purple;
+      animation-name: move;
+      animation-duration: 2s;
+      animation-timing-function: ease-out;
+      animation-delay: 1s;
+      animation-direction: alternate;
+      animation-iteration-count: infinite;
+      animation-fill-mode: none;
+      animation-play-state: running;
+    }
 }
 
 @media (max-width:1024px){
@@ -206,18 +258,7 @@
       margin-right: 26px;
       font: 700 14px/40px Roboto, arial, helvetica, sans-serif;
     }
-  /*.menu__item_active:after {
-          position: absolute;
-          display: block;
-          content: '';
-          left: 0;
-          width: 100%;
-          height: 3px;
-          background: #0056EC;
-          opacity: 0;
-          transition: opacity 0.5s;
-          top:29px;
-    }*/
+
    .main{
     padding: 15% 31px 140px 31px;
     background-size: 51%;
@@ -239,6 +280,32 @@
     margin: 19px 0px 0px 7px;
     border-radius:4px;
   }
+
+  @keyframes move {
+    0% {
+      transform: translateX(0%);
+      opacity:25%;
+    }
+    100% {
+      transform:translateX(5000%);
+      opacity: 100%;
+    }
+  }
+    .square {
+      display: block;
+      height: 20px;
+      width:20px;
+      opacity:25%;
+      background-color: purple;
+      animation-name: move;
+      animation-duration: 2s;
+      animation-timing-function: ease-out;
+      animation-delay: 1s;
+      animation-direction: alternate;
+      animation-iteration-count: infinite;
+      animation-fill-mode: none;
+      animation-play-state: running;
+    }
 }
 
 @media (max-width:768px) {
@@ -377,4 +444,29 @@
 .menu__item {
   transition-duration: .25s;
 }
+@keyframes move {
+  0% {
+    transform: translateX(0%);
+    opacity:25%;
+  }
+  100% {
+    transform:translateX(3700%);
+    opacity: 100%;
+  }
+}
+  .square {
+    display: block;
+    height: 20px;
+    width:20px;
+    opacity:25%;
+    background-color: purple;
+    animation-name: move;
+    animation-duration: 2s;
+    animation-timing-function: ease-out;
+    animation-delay: 1s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+    animation-fill-mode: none;
+    animation-play-state: running;
+  }
 }
