--- a/style.css
+++ b/style.css
@@ -1,31 +1,472 @@
-.main-content__title {
-  font-family: 'Oswald', sans-serif;
-  color: green;
+@media(max-width:1920px){
+.main__title {
+  font: bold 66px/88px pt_serif, arial, helvetica, sans-serif;
+  margin: 149px 3px 32px 71px;
 }
 
-.main-content__subtitle {
-  font-family: 'Lobster', cursive;
+.main__subtitle {
+  font: 500 23px/28px Roboto, arial, helvetica, sans-serif;
+  margin: 0 0 27px 71px;
+  width: 453px;
+  letter-spacing: -0.54px;
 }
 .menu {
   display: flex;
   align-items: center;
+  margin: -23px 9px;
 }
-.main-content__button {
-  color: blue;
-}
+
 .header{
+  padding: 32px 185px;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 7px;
 }
 
 .logo{
-  padding: 40px 0;
+  width: 200px;
+  height: 37px;
+  background: url('img/logo.svg');
+  background-size: 193px;
+  background-repeat:no-repeat;
 }
 
 .menu__item{
-  padding: 0 13px;
+  position: relative;
+  margin-right: 26px;
+  font: 500 18px/45px Roboto, arial, helvetica, sans-serif;
+  color: #000;
+  text-decoration: none;
+  transition: opacity 0.5s;
 }
 
 .menu__item:last-child{
-  padding-right: 0;
+  margin-right: 1px;
+}
+
+.menu__item_active:after{
+  position: absolute;
+  display: block;
+  content: '';
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: #0056EC;
+  opacity: 0;
+  transition: opacity 0.5s;
+  top:32px;
+}
+
+.menu__item:hover:after{
+  position: absolute;
+  display: block;
+  content: '';
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: #0056EC;
+  opacity: 0;
+  transition: opacity 0.5s, width 0.5s;
+}
+
+.menu__item:hover{
+  opacity: 0.5;
+}
+
+.menu__item:hover:after, .menu__item_active:after{
+  opacity: 1;
+  width: 100%;
+}
+
+.main{
+  padding: 49px 63% 262px 116px;
+  background: top right no-repeat url(img/mainlmg.svg);
+  background-position: center right 189px;
+  background-size: 770px;
+  float:left;
+}
+
+.main__title-text_highlight{
+  background: #ECF3FF;
+}
+
+.main__button{
+  display: inline-block;
+  font: 18px/17px Roboto, arial, helvetica, sans-serif;
+  color: #fff;
+  background: #0056EC;
+  padding: 22px 35px 19px 21px;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: opacity .5s;
+  margin: 13px 0 0 72px;
+}
+
+.main__button:hover{
+  opacity: .5;
+}
+
+#menu__toggle{
+  opacity: 0;
+}
+
+ @keyframes move {
+   0% {
+     transform: translateX(0%);
+     opacity:25%;
+   }
+   100% {
+     transform:translateX(9400%);
+     opacity: 100%;
+   }
+ }
+   .square {
+     display: block;
+     height: 20px;
+     width:20px;
+     opacity:25%;
+     background-color: purple;
+     animation-name: move;
+     animation-duration: 2s;
+     animation-timing-function: ease-out;
+     animation-delay: 1s;
+     animation-direction: alternate;
+     animation-iteration-count: infinite;
+     animation-fill-mode: none;
+     animation-play-state: running;
+   }
+}
+
+@media(max-width:1367px){
+  .logo{
+  width: 200px;
+  height: 37px;
+  background-size: 193px;
+  background-repeat:no-repeat;
+}
+.header{
+    margin:28px 0px;
+    padding: 11px 210px;
+  }
+ .menu {
+    margin: -20px 4px 0px 400px;
+  }
+  .menu__item{
+      margin-right: 26px;
+      font: 700 14px/40px Roboto, arial, helvetica, sans-serif;
+    }
+  .menu__item_active:after{
+      position: absolute;
+      display: block;
+      content: '';
+      left: 0;
+      width: 100%;
+      height: 3px;
+      background: #0056EC;
+      opacity: 0;
+      transition: opacity 0.5s;
+      top:29px;
+    }
+    .menu__item:hover:after{
+      position: absolute;
+      display: block;
+      content: '';
+      left: 0;
+      width: 100%;
+      height: 3px;
+      background: #0056EC;
+      opacity: 0;
+      transition: opacity 0.5s, width 0.5s;
+    }
+
+    .menu__item:hover{
+      opacity: 0.5;
+    }
+
+    .menu__item:hover:after, .menu__item_active:after{
+      opacity: 1;
+      width: 100%;
+    }
+  .main{
+    padding: 15% 31px 136px 33px;
+    background-size: 38%;
+    background-position: center right 210px;
+  }
+
+  .main__title{
+    margin:-108px 672px 41px 177px;
+    font: bold 50px/65px pt_serif, arial, helvetica, sans-serif;
+  }
+  .main__subtitle{
+    margin:0px 0px 20px 177px;
+    font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
+    width: 351px;
+    letter-spacing: 0px;
+  }
+
+  .main__button{
+    font: 500 14px/3px Roboto, arial, helvetica, sans-serif;
+    margin: 21px 0px 0px 178px;
+    border-radius:4px;
+    padding: 22px 27px 20px 16px;
+  }
+
+  @keyframes move {
+    0% {
+      transform: translateX(0%);
+      opacity:25%;
+    }
+    100% {
+      transform:translateX(6700%);
+      opacity: 100%;
+    }
+  }
+    .square {
+      display: block;
+      height: 20px;
+      width:20px;
+      opacity:25%;
+      background-color: purple;
+      animation-name: move;
+      animation-duration: 2s;
+      animation-timing-function: ease-out;
+      animation-delay: 1s;
+      animation-direction: alternate;
+      animation-iteration-count: infinite;
+      animation-fill-mode: none;
+      animation-play-state: running;
+    }
+}
+
+@media (max-width:1024px){
+
+.logo{
+  width: 200px;
+  height: 35px;
+  background-size: 193px;
+  background-repeat:no-repeat;
+  margin-left: -148px;
+}
+  .header{
+    margin:28px 0px;
+    padding: 11px 185px;
+  }
+   .menu {
+    margin: -19px -149px;
+  }
+   .menu__item{
+      margin-right: 26px;
+      font: 700 14px/40px Roboto, arial, helvetica, sans-serif;
+    }
+
+   .main{
+    padding: 15% 31px 140px 31px;
+    background-size: 51%;
+    background-position: center right 39px;
+  }
+
+  .main__title{
+    margin:-52px 405px 41px 6px;
+    font: bold 50px/65px pt_serif, arial, helvetica, sans-serif;
+  }
+  .main__subtitle{
+    margin:0px 0px 23px 7px;
+    font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
+    width: 351px;
+  }
+
+  .main__button{
+    font: 500 14px/2px Roboto, arial, helvetica, sans-serif;
+    margin: 19px 0px 0px 7px;
+    border-radius:4px;
+  }
+
+  @keyframes move {
+    0% {
+      transform: translateX(0%);
+      opacity:25%;
+    }
+    100% {
+      transform:translateX(5000%);
+      opacity: 100%;
+    }
+  }
+    .square {
+      display: block;
+      height: 20px;
+      width:20px;
+      opacity:25%;
+      background-color: purple;
+      animation-name: move;
+      animation-duration: 2s;
+      animation-timing-function: ease-out;
+      animation-delay: 1s;
+      animation-direction: alternate;
+      animation-iteration-count: infinite;
+      animation-fill-mode: none;
+      animation-play-state: running;
+    }
+}
+
+@media (max-width:768px) {
+  .menu{
+    display:none;
+  }
+
+  .logo{
+    background: url('img/logomobile.svg');
+    background-size: 36px;
+    background-repeat:no-repeat;
+    background-position: 0px 0px;
+  }
+
+  .header{
+    margin:25px 15px;
+    width:52px;
+    padding: 0px;
+  }
+  .main{
+    text-align: center;
+    padding: 31% 0 0;
+    background-size: 77%;
+    background-position: top center;
+  }
+
+  .main__title{
+    margin:148px 0px 35px 5px;
+    font: bold 30px/39px pt_serif, arial, helvetica, sans-serif;
+  }
+  .main__subtitle{
+    margin:0px 0px 20px 60px;
+    font: 500 16px/19px Roboto, arial, helvetica, sans-serif;
+    width: 238px;
+  }
+
+  .main__button{
+    font: 500 13px/3px Roboto, arial, helvetica, sans-serif;
+    margin: 4px 0px 0px 2px;
+    border-radius:4px;
+  }
+
+  #menu__toggle{
+    opacity: 0;
+  }
+  /* стилизуем кнопку */
+.menu__btn {
+  display: flex; /* используем flex для центрирования содержимого */
+  align-items: center;  /* центрируем содержимое кнопки */
+  position: fixed;
+  top: 27px;
+  right: 23px;
+  width: 27px;
+  height: 26px;
+  cursor: pointer;
+  z-index: 1;
+}
+/* добавляем "гамбургер" */
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #0056EC;
+}
+.menu__btn > span::before {
+  content: '';
+  top: -8px;
+}
+.menu__btn > span::after {
+  content: '';
+  top: 8px;
+}
+
+/* контейнер меню */
+.menu {
+  display: block;
+  position: fixed;
+  visibility: hidden;
+  top: 0;
+  left: -100%;
+  width: 400px;
+  height: 100%;
+  margin: 0;
+  padding: 172px 0;
+  list-style: none;
+  text-align: center;
+  background-color: #FFF;
+}
+/* элементы меню */
+.menu__item {
+  display: block;
+  padding: 10px 24px;
+  color: #333;
+  font-family: 'Roboto', sans-serif;
+  font-size: 30px;
+  font-weight: 600;
+  text-decoration: none;
+}
+.menu__item:hover {
+  background-color: #CFD8DC;
+}
+.menu__item_active:after{
+  top: 49px;
+  opacity: 0;
+}
+.menu__item:last-child{
+  margin-right: 1px;
+}
+
+#menu__toggle:checked ~ .menu__btn > span {
+  transform: rotate(45deg);
+}
+#menu__toggle:checked ~ .menu__btn > span::before {
+  top: 0;
+  transform: rotate(0);
+}
+#menu__toggle:checked ~ .menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .menu {
+  visibility: visible;
+  left: 0;
+}
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  transition-duration: .25s;
+}
+.menu {
+  transition-duration: .25s;
+}
+.menu__item {
+  transition-duration: .25s;
+}
+@keyframes move {
+  0% {
+    transform: translateX(0%);
+    opacity:25%;
+  }
+  100% {
+    transform:translateX(3700%);
+    opacity: 100%;
+  }
+}
+  .square {
+    display: block;
+    height: 20px;
+    width:20px;
+    opacity:25%;
+    background-color: purple;
+    animation-name: move;
+    animation-duration: 2s;
+    animation-timing-function: ease-out;
+    animation-delay: 1s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+    animation-fill-mode: none;
+    animation-play-state: running;
+  }
 }
