--- a/style.css
+++ b/style.css
@@ -92,8 +92,9 @@
   linear-gradient(to top, #ECF3FF 90%, #FFF 10%);
 }
 .main__title-text_highlight_2 {
-  background: linear-gradient(to right, rgba(255, 255, 255, 0) 90%, #ECF3FF, rgba(255, 255, 255, 0) 10%, #FFF 10%),
-  linear-gradient(to top, #ECF3FF 90%, #ECF3FF 10%, #FFF 10%);
+  background:
+    linear-gradient(to right, rgba(255, 255, 255, 0) 90%, #ECF3FF, rgba(255, 255, 255, 0) 10%, #FFF 10%),
+    linear-gradient(to top, #ecf3ff 90%, #ecf3ff 10%, #FFF 10%);
 }
 
 .main__button {
@@ -112,7 +113,7 @@
   opacity: .5;
 }
 
-#menu__toggle{
+#menu__toggle {
   opacity: 0;
 }
 
@@ -124,13 +125,13 @@
   transform: translate(936px, 916px);
 }
 
-  .circle_2 {
-    background: #c8dbfb;
-    border-radius: 50%;
-    width: 8px;
-    height: 8px;
-    transform: translate(948px, 908px);
-  }
+.circle_2 {
+   background: #c8dbfb;
+   border-radius: 50%;
+   width: 8px;
+   height: 8px;
+   transform: translate(948px, 908px);
+}
 
   .circle_3 {
     background: #c8dbfb;
