--- a/style.css
+++ b/style.css
@@ -93,8 +93,8 @@
 }
 .main__title-text_highlight_2 {
   background:
-    linear-gradient(to right, rgba(255, 255, 255, 0) 90%, #ECF3FF, rgba(255, 255, 255, 0) 10%, #FFF 10%),
-    linear-gradient(to top, #ecf3ff 90%, #ecf3ff 10%, #FFF 10%);
+    linear-gradient(to right, rgba(255, 255, 255, 0) 90%, #ecf3ff, rgba(255, 255, 255, 0) 10%, #FFF 10%),
+    linear-gradient(to top, #ecf3ff 90%, #ecf3ff 10%, #fff 10%);
 }
 
 .main__button {
@@ -126,19 +126,19 @@
 }
 
 .circle_2 {
-   background: #c8dbfb;
-   border-radius: 50%;
-   width: 8px;
-   height: 8px;
-   transform: translate(948px, 908px);
+  background: #c8dbfb;
+  border-radius: 50%;
+  width: 8px;
+  height: 8px;
+  transform: translate(948px, 908px);
 }
 
-  .circle_3 {
+.circle_3 {
     background: #c8dbfb;
     border-radius: 50%;
     width: 8px;
     height: 8px;
-    transform: translate(960px, 900px);
+  transform: translate(960px, 900px);
   }
 
 @media(max-width:1367px) {
@@ -222,13 +222,13 @@
     height: 8px;
     transform: translate(659px, 604px);
   }
-    .circle_2 {
+.circle_2 {
       background: #c8dbfb;
       border-radius: 50%;
       width: 8px;
       height: 8px;
       transform: translate(671px, 596px);
-    }
+}
     .circle_3 {
       background: #c8dbfb;
       border-radius: 50%;
