--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@
   border-radius: 50%;
   width: 8px;
   height: 8px;
-  transform: translate(659px, 604px);
+    transform: translate(659px, 604px);
 }
 
 .circle_2 {
@@ -236,7 +236,7 @@
   border-radius: 50%;
   width: 8px;
   height: 8px;
-  transform: translate(671px, 596px);
+    transform: translate(671px, 596px);
 }
 
 .circle_3 {
@@ -244,12 +244,11 @@
   border-radius: 50%;
   width: 8px;
   height: 8px;
-  transform: translate(683px, 588px);
+    transform: translate(683px, 588px);
 }
 }
 
-@media (max-width:1024px) {
-
+@media (max-width: 1024px) {
 .logo {
   width: 200px;
   height: 35px;
@@ -259,7 +258,7 @@
 }
 
   .header {
-    margin:28px 0px;
+    margin: 28px 0;
     padding: 11px 185px;
   }
 
@@ -279,12 +278,12 @@
   }
 
   .main__title {
-    margin:-52px 405px 41px 6px;
+    margin: -52px 405px 41px 6px;
     font: bold 50px/65px pt_serif, arial, helvetica, sans-serif;
   }
 
   .main__subtitle {
-    margin:0px 0px 23px 7px;
+    margin: 0px 0px 23px 7px;
     font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
     width: 351px;
   }
@@ -292,7 +291,7 @@
   .main__button {
     font: 500 14px/2px Roboto, arial, helvetica, sans-serif;
     margin: 19px 0px 0px 7px;
-    border-radius:4px;
+    border-radius: 4px;
   }
 
 .circle_1 {
@@ -328,14 +327,14 @@
   .logo {
     background: url('img/logomobile.svg');
     background-size: 36px;
-    background-repeat:no-repeat;
-    background-position: 0px 0px;
+    background-repeat: no-repeat;
+    background-position: 0 0;
   }
 
   .header {
-    margin:25px 15px;
-    width:52px;
-    padding: 0px;
+    margin: 25px 15px;
+    width: 52px;
+    padding: 0;
   }
 
   .main {
@@ -346,20 +345,20 @@
   }
 
   .main__title {
-    margin:148px 0px 35px 5px;
+    margin: 148px 0 35px 5px;
     font: bold 30px/39px pt_serif, arial, helvetica, sans-serif;
   }
 
   .main__subtitle {
-    margin:0px 0px 20px 60px;
+    margin: 0 0 20px 60px;
     font: 500 16px/19px Roboto, arial, helvetica, sans-serif;
     width: 238px;
   }
 
   .main__button {
     font: 500 13px/3px Roboto, arial, helvetica, sans-serif;
-    margin: 4px 0px 0px 2px;
-    border-radius:4px;
+    margin: 4px 0 0 2px;
+    border-radius: 4px;
   }
 
   #menu__toggle {
