--- a/style.css
+++ b/style.css
@@ -377,19 +377,19 @@
     z-index: 1;
 }
 
-.menu__btn > span,
-.menu__btn > span::before,
-.menu__btn > span::after {
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
   display: block;
   position: absolute;
   width: 100%;
-  height: 2px;
-  background-color: #0056EC;
+    height: 2px;
+    background-color: #0056ec;
 }
 
-.menu__btn > span::before {
-  content: '';
-  top: -8px;
+  .menu__btn > span::before {
+    content: '';
+    top: -8px;
 }
 
 .menu__btn > span::after {
@@ -397,19 +397,19 @@
   top: 8px;
 }
 
-.menu {
-  display: block;
-  position: fixed;
-  visibility: hidden;
-  top: 0;
-  left: -100%;
-  width: 400px;
-  height: 100%;
-  margin: 0;
-  padding: 172px 0;
-  list-style: none;
-  text-align: center;
-  background-color: #FFF;
+  .menu {
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: 0;
+    left: -100%;
+    width: 400px;
+    height: 100%;
+    margin: 0;
+    padding: 172px 0;
+    list-style: none;
+    text-align: center;
+    background-color: #FFF;
 }
 
 .menu__item {
