--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 .main__title {
   font: bold 66px/88px pt_serif, arial, helvetica, sans-serif;
   margin: 149px 3px 32px 71px;
@@ -435,21 +434,24 @@
     margin-right: 1px;
   }
 
-#menu__toggle:checked ~ .menu__btn > span {
-  transform: rotate(45deg);
+  #menu__toggle:checked ~ .menu__btn > span {
+    transform: rotate(45deg);
 }
-#menu__toggle:checked ~ .menu__btn > span::before {
-  top: 0;
-  transform: rotate(0);
-}
-#menu__toggle:checked ~ .menu__btn > span::after {
-  top: 0;
-  transform: rotate(90deg);
-}
-#menu__toggle:checked ~ .menu {
-  visibility: visible;
-  left: 0;
-}
+
+  #menu__toggle:checked ~ .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0);
+  }
+
+  #menu__toggle:checked ~ .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+
+  #menu__toggle:checked ~ .menu {
+    visibility: visible;
+    left: 0;
+  }
 
   .menu__btn > span,
   .menu__btn > span::before,
@@ -458,11 +460,11 @@
   }
 
   .menu {
-    transition-duration: .25s;
+    transition-duration: 0.25s;
   }
 
   .menu__item {
-    transition-duration: .25s;
+    transition-duration: 0.25s;
   }
 
   .circle_1 {
