--- a/style.css
+++ b/style.css
@@ -87,8 +87,8 @@
 }
 
 .main__title-text_highlight_1 {
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 95%, #ECF3FF 5%, #FFF 5%),
-  linear-gradient(to top, #ECF3FF 90%, #FFF 10%);
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 95%, #ecf3ff 5%, #fff 5%),
+  linear-gradient(to top, #ecf3ff 90%, #fff 10%);
 }
 
 .main__title-text_highlight_2 {
@@ -101,7 +101,7 @@
   display: inline-block;
   font: 18px/17px Roboto, arial, helvetica, sans-serif;
   color: #fff;
-  background: #0056EC;
+  background: #0056ec;
   padding: 22px 35px 19px 21px;
   text-decoration: none;
   border-radius: 4px;
@@ -170,7 +170,7 @@
       left: 0;
       width: 100%;
     height: 3px;
-    background: #0056EC;
+    background: #0056ec;
     opacity: 0;
       transition: opacity 0.5s;
     top: 29px;
@@ -183,7 +183,7 @@
       left: 0;
       width: 100%;
     height: 3px;
-    background: #0056EC;
+    background: #0056ec;
     opacity: 0;
     transition: opacity 0.5s, width 0.5s;
     }
@@ -476,15 +476,15 @@
 }
 
   .circle_2 {
-    background: #FFF;
+    background: #fff;
     border-radius: 50%;
     width: 8px;
     height: 8px;
-    transform: translate(0px, 0px);
+    transform: translate(0, 0);
   }
 
   .circle_3 {
-    background: #FFF;
+    background: #fff;
     border-radius: 50%;
     width: 8px;
     height: 8px;
