--- a/style.css
+++ b/style.css
@@ -86,10 +86,11 @@
   float:left;
 }
 
-.main__title-text_highlight_1 {
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 95%, #ecf3ff 5%, #fff 5%),
-  linear-gradient(to top, #ecf3ff 90%, #fff 10%);
-}
+  .main__title-text_highlight_1 {
+    background-image:
+    linear-gradient(to bottom, rgba(255, 255, 255, 0) 95%, #ecf3ff 5%, #fff 5%),
+    linear-gradient(to top, #ecf3ff 90%, #fff 10%);
+  }
 
 .main__title-text_highlight_2 {
   background:
@@ -488,6 +489,6 @@
     border-radius: 50%;
     width: 8px;
     height: 8px;
-    transform: translate(0px, 0px);
+    transform: translate(0, 0);
   }
 }
