--- a/style.css
+++ b/style.css
@@ -368,14 +368,14 @@
     margin: -90px 0 20px 63px;
     font: 500 16px/19px Roboto, arial, helvetica, sans-serif;
     width: 238px;
-    padding: 0px 184px;
+    padding: 0 184px;
   }
 
   .main__button {
     font: 500 14px/3px Roboto, arial, helvetica, sans-serif;
     margin: 7px 0 0 2px;
     border-radius: 4px;
-    padding: 22px 24px 20px 16px
+    padding: 22px 24px 20px 16px;
   }
 
   #menu__toggle {
@@ -484,6 +484,7 @@
 }
 
 @media (max-width: 552px) {
+  
   .main__title{
     margin: 0 0;
     padding: 152px 200px;
